adding random subject terms call, issue ucd-library/rp-ucd-client#102
