# api/controllers/swagger/spec.json
@@ -79,6 +79,31 @@
         }
       }
     },
+    "/api/miv/{username}": {
+      "get": {
+        "description": "Get researchers ris formatted publication list",
+        "tags": [
+          "MIV RIS Export"
+        ],
+        "parameters": [
+          {
+            "name": "username",
+            "description": "id of researcher",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ris formatted citations",
+            "content": "text/plain"
+          }
+        }
+      }
+    },
     "/api/search": {
       "post": {
         "description": "Application search query",
@@ -212,6 +237,99 @@
         "responses": {
           "200": {
             "description": "ElasticSearch search result object",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/subject-term/broader/{id}": {
+      "get": {
+        "description": "Get broader terms for provided subject id",
+        "tags": [
+          "Subject Term Broader"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id of subject term",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Terms array",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/subject-term/narrower/{id}": {
+      "get": {
+        "description": "Get narrower terms for provided subject id",
+        "tags": [
+          "Subject Term Narrower"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id of subject term",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Terms array",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/subject-term/random/{count}": {
+      "get": {
+        "description": "Get random list of terms",
+        "tags": [
+          "Subject Term Random"
+        ],
+        "parameters": [
+          {
+            "name": "count",
+            "description": "number of terms to return",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Terms array",
             "content": {
               "application/json": {
                 "schema": {
